# Bug-Tracker

./: CMakeLists.txt  README.md
Src/: Bug.cpp  Bug.h  Customer.cpp  Customer.h  Employee.cpp  Employee.h  Features.cpp  Features.h  FileOperationsManager.h  Product.h  Products.cpp  UI.cpp  UI.h  Utils.h  main.cpp
